Archive2/18/6bae07f095a6ec/output
main.cpp: In function 'int main()':
main.cpp:24:51: error: conversion from '_flashData*' to non-scalar type '_flashData' requested
     _flashData appData, flashData = (_flashData *)0x01040;
                                                   ^
main.cpp:24:16: warning: unused variable 'appData' [-Wunused-variable]
     _flashData appData, flashData = (_flashData *)0x01040;
                ^
